	* examples/raptorerror.hex: Removed.
	* examples/shop.hex: Removed.
	* examples/shop.owl: Removed.
	* examples/test.hex: Removed.
	* examples/tweety.hex: Removed.
	* examples/tweety_bird.owl: Removed.

	* include/dlvhex/AnswerSet.h: Added static methods setMaxLevelWeight(),
	getMaxLevel().

	* include/dlvhex/ResultContainer.h: Removed lowestWeights class member
	variable.

	* src/dlvhex/AnswerSet.cpp (setSet), (addWeight),
	(setMaxLevelWeight), (getMaxLevel): Added methods.

	* src/dlvhex/OutputBuilder.cpp (buildAnswerSet): Improve silent output
	in case of weak constraints.

	* src/dlvhex/ResultContainer.cpp (addSet), (print): Remove lowest cost
	computation at set-add-time. Stop model output in case of weak
	constraints after best model(s), correcting previous wrong handling.

	* src/dlvhex/dlvhex.cpp (printUsage), (main): Added switch --allmodels
	to print all models in case of weak constraints.

	* src/testsuite/dlvhex/Makefile.am: Added dlvhex test script to
	testsuite.

2006-09-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/testsuite/dlvhex/Makefile.am (dlvhexTS_SOURCES): Use
	$(top_srcdir) instead of ../.. .
	(AM_CPPFLAGS): Add -I$(top_srcdir)/src.

	* configure.ac: Bump version to 1.3.
	Always define FLEXLEXER_H, otw. make distcheck is a no-op.

2006-09-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Fix bashism.

2006-09-14  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/cppunit.m4: Include updated macros from cppunit 1.12.0.

	* m4/boost.m4: Fix boost version checking on macosx.

	* configure.ac: Don't follow subdirectories when searching for
	FlexLexer.h.

	* src/dlvhex/ProcessBuf.cpp (ProcessBuf): sigemptyset() is a macro
	on macosx.

2006-09-13  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* configure.ac: Refined packaging of FlexLexer.h.

2006-09-13  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/common.h.in: New file.

	* README: Added configuration information.
